# python_project_products

./: .coverage  README.md  pyproject.toml
src/: class.py  main.py  new_class.py
tests/: conftest.py  test_class.py  test_main.py  test_new_class.py
